--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ i{
 
 .img{
     height: 80px;
+    width: 350px;
 }
 
 .navbar{
@@ -48,11 +49,7 @@ i{
 }
 
 nav ul,li{
-    padding-left: 30px;
-    margin-left: 70px;
-    text-decoration: none;
-    color: black;
-    display: inline-block;
+    margin-left: 40px;
 }
 
 .img2{
@@ -118,7 +115,7 @@ span{
     font-size: 16px;
     border-radius: 0.5em;
     background-color: #152db5;
-    border-bottom: 10px solid #2ca736;
+    /* border-bottom: 10px solid #2ca736; */
   }
   i {
     color: #f2f8f5;
@@ -310,14 +307,15 @@ span{
     font-size: 20px;
   }
   .p1{
-    display: inline-flex;
+    display: inline;
     font-size: small;
+    text-align: center;
       
   }
  
   .img{
-    display: inline-block;
-    width: 60%;
+    width: 50px;
+    height: 100px;
   }
   .p2{
     display: inline-flex;
@@ -429,10 +427,10 @@ span{
   }
 
   .links{
+    width: 100%;
+    margin-top: 0px;
+    margin-left: 0px;  
     display: block;
-    width: 100% auto;
-    margin: 0px auto;
-    text-align: center;
     
   }
 
@@ -441,15 +439,18 @@ span{
     margin-left: 10px;
   }
   .p1{
-    display: inline-flex;
+    width: 100%;
+    margin-top: 0px;
+    margin-left: 0px;  
+    display: block;
     font-size: small;
+
       
   }
  
   .img{
-    display: inline-block;
-    width: 50%;
-    height: 50px;
+      height: 50px;
+      width: 200px;
   }
   .p2{
     display: inline-flex;
@@ -459,9 +460,10 @@ span{
   }
 
   .p3{
-    width: 100%;
-    font-size: x-small;
-    margin-left: 0px;
+    width: 80%;
+    text-align: center;
+    font-size: 15px;
+    margin-left: 40px;
   }
 
   h2{
@@ -544,10 +546,15 @@ span{
   
   .images img{
       display: block;
-      width: 220px;
+      width: 250px;
       margin: 20px auto;
-      height: 120px;
+      height: 150px;
       
+  }
+
+  .container{
+    height: 150px;
+    width: 125px;
   }
 
 }
@@ -579,9 +586,9 @@ span{
   }
 
   .img{
-    display: inline-block;
-    width: 50%;
-  }
+    height: 50px;
+    width: 200px;
+}
   .p2{
     display: inline-flex;
     width: 100%;
@@ -590,9 +597,10 @@ span{
   }
 
   .p3{
-    width: 100%;
-    font-size: 15px;
-    margin-left: 0px;
+    width: 80%;
+    text-align: center;
+    font-size: 20px;
+    margin-left: 40px;
   }
 
   h2{
@@ -662,10 +670,16 @@ span{
   
   .images img{
       display: block;
-      width: 250px;
+      width: 300px;
       margin: 20px auto;
-      height: 150px;
+      height: 200px;
       
+  }
+
+  .container{
+    height: 150px;
+    width: 150px;
+    display: flex;
   }
 }
 
@@ -695,9 +709,9 @@ span{
   }
 
   .img{
-    display: inline-block;
-    width: 50%;
-  }
+    height: 70px;
+    width: 250px;
+}
   .p2{
     display: inline-flex;
     width: 100%;
@@ -784,6 +798,12 @@ span{
       height: 250px;
       
   }
+
+  .container{
+    height: 150px;
+    width: 170px;
+    display: flex;
+  }
 }
 
 
@@ -821,9 +841,9 @@ span{
 
 
   .img{
-    display: inline-block;
-    width: 50%;
-  }
+    height: 70px;
+    width: 280px;
+}
   .p2{
     display: inline-flex;
     width: 100%;
@@ -942,9 +962,9 @@ span{
   }
 
   .img{
-    display: inline-block;
-    width: 50%;
-  }
+    height: 70px;
+    width: 280px;
+}
   .p2{
     display: inline-flex;
     width: 100%;
@@ -1062,9 +1082,9 @@ span{
   }
 
   .img{
-    display: inline-block;
-    width: 60%;
-  }
+    height: 70px;
+    width: 280px;
+}
   .p2{
     display: inline-flex;
     width: 100%;
@@ -1183,8 +1203,8 @@ span{
   }
 
   .img{
-    display: inline-block;
-    width: 60%;
+    height: 80px;
+    width: 300px;
   }
   .p2{
     display: inline-flex;
@@ -1303,8 +1323,8 @@ span{
   }
 
   .img{
-    display: inline-block;
-    width: 60%;
+    height: 80px;
+    width: 300px;
   }
   .p2{
     display: inline-flex;
@@ -1423,8 +1443,8 @@ span{
   }
 
   .img{
-    display: inline-block;
-    width: 60%;
+    height: 80px;
+    width: 320px;
   }
   .p2{
     display: inline-flex;
@@ -1543,8 +1563,8 @@ span{
   }
 
   .img{
-    display: inline-block;
-    width: 50%;
+    height: 80px;
+    width: 320px;
   }
 
   .p2{
@@ -1637,1066 +1657,4 @@ span{
       
   }
 }
-
-/* @media (min-width: 991px) and (max-width: 1050px){
-  .header{
-    width: 100%;
-    height: 20vh;
-
-  }
-  .links{
-    display: inline-flex;
-    width: 100%;
-    margin-left: 250px;
-    
-  }
-  i{
-    font-size: 30px;
-  }
-  .p1{
-    display: block;
-    font-size: 25px;
-    width: 100%;
-    height: auto;
-    margin: 0px auto;
-    
-  }
-
-  .img{
-    display: inline-block;
-    width: 50%;
-  }
-
-  .navbar ul li a{
-    width: 100%;
-  }
-
-  .p2{
-    display: inline-flex;
-    width: 100%;
-    font-size: larger;
-    text-align: center;
-    
-  }
-
-  .p3{
-    width: 80%;
-    text-align: center;
-    font-size: 25px;
-    margin-left: 70px;
-  }
-
-  h2{
-    color: blue;
-    margin-top: 350px;
-    text-align: center;
-    font-weight: 600;
-    font-size: 30px
-  }
-
-  .logo-image{
-    width: 350px;
-    height: 350px;
-  }
-
-  .flex-container{
-    width: 100%;
-    height: auto;
-    display: block;
-    margin-left: 0px;
-  
-    
-  }
-
-  .flex-box{
-    width: 500px;
-    height: 200px;
-    margin-left: 230px;
-  }
-
-  .flex-box i{
-    font-size: 40px;
-  }
-    
-  .project{
-    display: block;
-    width: 100%;
-    height: 700px;
-  }
-  .left{
-    width: 100%;
-    color: #152db5;
-    margin-left: 0px;
-
-  }
-
-  .right{
-    width: 97%;
-    color: #152db5;
-    
-  }
-
-  .last-para{
-    display: inline;
-    color: black;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 25px;
-  }
-
-  h1{
-    font-size: 50px;
-  }
-
-  .images{
-    display: block;
-    width: 100%;
-  }
-  
-  .images img{
-      display: block;
-      width: 500px;
-      margin: 20px auto;
-      height: 300px;
-      
-  }
-  
-} */
-
-
-
-
- /* @media screen and (min-width:401px) {
-  .header{
-    width: 100%;
-    height: 20vh;
-
-  }
-  .links{
-    display: inline-flex;
-    width: 100%;
-    margin-left: 30px; 
-    
-  }
-  i{
-    font-size: 24px;
-  }
-  .p1{
-    display: block;
-    font-size: small;
-    width: 100%;
-    height: auto;
-    margin: 0px auto;
-    
-  }
-  .button{
-    display: none; 
-    width: 100%;
-    margin-top: -10px;
-  
-    
-  }
-
-
-  .img{
-    display: inline-block;
-    width: 50%;
-  }
-  .p2{
-    display: inline-flex;
-    width: 100%;
-    font-size: larger;
-    
-  }
-
-  .p3{
-    width: 100%;
-    font-size: small;
-    margin-left: 0px;
-  }
-
-  h2{
-    color: blue;
-    margin-top: 200px;
-    text-align: center;
-    font-weight: 600;
-    font-size: 1em;;
-  }
-
-  .logo-image{
-    width: 100%;
-  }
-
-  .flex-container{
-    width: 100%;
-    height: auto;
-    display: block;
-    margin-left: 0px;
-  
-    
-  }
-
-  .flex-box{
-    width: auto;
-    height: 200px;
-  }
-    
-  .project{
-    display: block;
-    width: 100%;
-    height: 1000px;
-  }
-  .left{
-    width: 100%;
-    color: #152db5;
-    margin-left: 0px;
-
-  }
-
-  .right{
-    width: 97%;
-    color: #152db5;
-    
-  }
-
-  .last-para{
-    display: inline;
-    color: black;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 19px;
-  }
-
-  h1{
-    font-size: x-large;
-  }
-
-  .images{
-    display: block;
-    width: 100%;
-  }
-  
-  .images img{
-      display: block;
-      width: 300px;
-      margin: 20px auto;
-      height: 200px;
-      
-  }
-    
-} */
-
-
-/* @media screen and (min-width:450px) {
- 
-  .header{
-    width: 100%;
-    height: 17vh;
-
-
-  }
-  .links{
-    display: inline-flex;
-    margin-left: 40px;
-    
-  }
-  .p1{
-    margin-top: 2px;
-  }
-
-  .img{
-    display: inline-block;
-    width: 60%;
-  }
-
-  .project{
-    display: block;
-    width: 100%;
-    height: 1000px;
-  }
-
-  .left{
-    width: 100%;
-    color: #152db5;
-    margin-left: 0px;
-
-  }
-
-  .right{
-    width: 100%;
-    color: #152db5;
-    
-  }
-
-  
-
-  .last-para{
-    display: inline;
-    color: black;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 20px;
-  }
-
-  i{
-    font-size: 25px;
-  }
-  .images{
-    display: block;
-    width: 100%;
-  }
-  
-  .images img{
-      display: block;
-      width: 400px;
-      margin: 20px auto;
-      height: 200px;
-      
-  }
-} */
-
-/* @media screen and (min-width:500px) {
- 
-  .header{
-    width: 100%;
-    height: 16vh;
-
-
-  }
-  .links{
-    display: inline-flex;
-    margin-left: 75px;
-    
-  }
-
-  i{
-    font-size: 29px;
-  }
-.img{
-  display: inline-block;
-  width: 70%;
-}
-
-  .p1{
-    display: inline-flex;
-    font-size: larger;
-    text-align: center;
-    width: 100%;
-    margin-top: 5px;
-    
-  }
-  .p2{
-    display: inline-flex;
-    width: 100%;
-    font-size: x-large;
-    text-align: center;
-    
-  }
-
-  .p3{
-    width: 100%;
-    font-size: small;
-    margin-left: 0px;
-  }
-
-  .images{
-    display: inline-block;
-    width: 100%;
-  }
-  
-  .images img{
-      display: block;
-      width: 450px;
-      margin: 20px auto;
-      height: 250px;
-    
-      
-  }
-
-  .project{
-    display: block;
-    width: 100%;
-    height: 900px;
-  }
-
-  .left{
-    width: 100%;
-    color: #152db5;
-    margin-left: 0px;
-
-  }
-
-  .right{
-    width: 100%;
-    color: #152db5;
-    
-  }
-
- 
-  .last-para{
-    display: inline;
-    color: black;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 22px;
-  }
-} */
-
-/* @media screen and (min-width:550px) {
- 
-  .header{
-    width: 100%;
-    height: 15vh;
-
-
-  }
-  .links{
-    display: inline-flex;
-    margin-left: 70px;
-    
-  }
-
-  i{
-    font-size: 27px;
-  }
-  .p1{
-    display: inline-flex;
-    font-size: larger;
-    width: 100%;
-    margin-top: 5px;
-    
-  }
-  .p2{
-    display: inline-flex;
-    width: 100%;
-    font-size: x-large;
-    text-align: center;
-    
-  }
-
-  .p3{
-    width: 100%;
-    font-size: small;
-    margin-left: 0px;
-  }
-
-  h2{
-    color: blue;
-    margin-top: 200px;
-    text-align: center;
-    font-weight: 600;
-    font-size: 1em;;
-  }
-
-
-
-  
-  .project{
-    display: block;
-    width: 100%;
-    height: 900px;
-  }
-  .left{
-    width: 100%;
-    color: #152db5;
-    margin-left: 0px;
-
-  }
-
-  .right{
-    width: 100%;
-    color: #152db5;
-    
-  }
-
-  .last-para{
-    display: inline;
-    color: black;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 23px;
-  }
-
-  .images{
-    display: block;
-    width: 100%;
-  }
-  
-  .images img{
-      display: block;
-      width: 480px;
-      margin: 20px auto;
-      height: 300px;
-      
-  }
-} */
-
-
-
-
-
-/* @media screen and (min-width:600px) {
-   
-  .header{
-    width: 100%;
-    height: 25vh;
-
-  }
-  .links{
-    display: block;
-    margin-left: 80px;
-    
-  }
-  i{
-    font-size: 36px;
-  }
-  .p1{
-    display: block;
-    font-size: x-large;
-    width: 100%;
-    margin-top: 5px;
-    
-  }
-
-  
-
-  .img{
-    display: inline-block;
-    width: 70%;
-  }
-  .p2{
-    display: inline-block;
-    width: 100%;
-    font-size: x-large;
-    
-  }
-
-  .p3{
-    width: 100%;
-    font-size: large;
-    margin-left: 0px;
-  }
-
-  h2{
-    color: blue;
-    margin-top: 200px;
-    text-align: center;
-    font-weight: 600;
-    font-size: 2em;;
-  }
-  .logo-image{
-    width: 70%;
-    margin: 0px auto;
-    
-  
-  }
-  
-  .logo{
-    display: block;
-    width: 100%;
-    margin: 25px auto;
-  }
-
-  .flex-container{
-    width: 100%;
-    height: auto;
-    display: inline-flex;
-    margin-left: 0px;
-    align-items: center;
-  
-    
-  }
-
-  .flex-box{
-    width: 70%;
-    height: 200px;
-    margin: 10px auto;
-  
-  }
-    
-  .project{
-    display: block;
-    width: 100%;
-    height: 900px;
-  }
-  .left{
-    display: block;
-    width: 100%;
-    color: #152db5;
-    margin-left: 0px;
-
-  }
-
-  .right{
-    width: 100%;
-    color: #152db5;
-    
-  }
-  
-
-  h1{
-    font-size: xx-large;
-  }
-
-  .images{
-    display: block;
-    width: 100%;
-  }
-  
-  .images img{
-      display: block;
-      width: 400px;
-      margin: 20px auto;
-      height: 250px;
-      
-  }
-} */
-
-
-/* @media screen and (min-width:700px) {
-   
-  .header{
-    width: 100%;
-    height: 20vh;
-
-  }
-  .links{
-    display: block;
-    width: 100%;
-  }
-  i{
-    font-size: 32px;
-  }
-  .p1{
-    display: block;
-    font-size: larger;
-    width: 100%;
-    text-align: center;
-    
-  }
-  
-    
-  .img{
-    display: block;
-    width: 60%;
-  }
-  .p2{
-    display: inline-block;
-    width: 100%;
-    font-size: large;
-    text-align: center;
-    
-  }
-
-  .p3{
-    width: 100%;
-    font-size: x-large;
-    margin-left: 0px;
-  }
-
-  h2{
-    color: blue;
-    margin-top: 200px;
-    text-align: center;
-    font-weight: 600;
-    font-size: 40px;
-  }
-
-  .wrapper {
-    position: relative;
-    width: 80vw;
-    transform: translate(-50%, -50%);
-    top: 200px;
-    left: 50%;
-    display: flex;
-    justify-content: space-around;
-    gap: 10px;
-  }
-  .container {
-    width: 28vmin;
-    height: 28vmin;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    padding: 1em 0;
-    position: relative;
-    font-size: 16px;
-    border-radius: 0.5em;
-    background-color: #152db5;
-    border-bottom: 10px solid #2ca736;
-  }
-  .logo-image{
-    width: 70%;
-    margin: 0px auto;
-    
-  
-  }
-  
-  .logo{
-    display: block;
-    width: 100%;
-    margin: 25px auto;
-  }
-
-  .flex-container{
-    width: 100%;
-    height: auto;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    
-  }
-
-  .flex-box{
-    width: 350px;
-    height: 250px;
-    background: #ffffff;
-    font-size: 25px;
-    text-align: center;
-    line-height: 200px;
-    border-radius: 20px;
-    color: #152db5;
-    font-weight: bold;
-    font-family:'Courier New', Courier, monospace;
-    box-shadow: 5px 10px 5px rgb(90, 83, 83);
-
-  }
-    
-  .project{
-    display: block;
-    width: 100%;
-    height: 750px;
-  }
-  .left{
-    display: block;
-    width: 100%;
-    color: #152db5;
-    margin-left: 0px;
-
-  }
-
-  .right{
-    display: block;
-    width: 100%;
-    color: #152db5;
-    
-  }
-
-  h2{
-    font-size: 30px;
-  }
-
-  h1{
-    font-size: xx-large;
-  }
-
-  .images{
-    display: flex;
-    width: 100%;
-  }
-  
-  .images img{
-      width: 40%;
-      margin: 20px auto;
-      height: 200px;
-      
-  }
-} */
-
-
-/* @media screen and (min-width:800px) {
-   
-  .header{
-    width: 100%;
-    height: auto;
-
-  }
-  .links{
-    display: inline-block;
-    text-align: center;
-    width: 100%;
-    margin: 0px auto;
-    
-  }
-  i{
-    font-size: 35px;
-  }
-  .p1{
-    display: inline-block;
-    font-size: larger;
-    width: 100%;
-    margin-top: 5px;
-    text-align: center;
-    
-  }
- 
-  .img{
-    display: inline-block;
-    width: 60%;
-    margin-top: 20px;
-  }
-  .p2{
-    display: inline-block;
-    width: 100%;
-    font-size: large;
-    text-align: center;
-    
-  }
-
-  .p3{
-    width: 100%;
-    font-size: x-large;
-    margin-left: 0px;
-  }
-
-  h2{
-    color: blue;
-    margin-top: 250px;
-    text-align: center;
-    font-weight: 600;
-    font-size: 2em;;
-  }
-
-  .logo-image{
-    width: 60%;
-    margin: 0px auto;
-    
-  
-  }
-  
-  .logo{
-    display: block;
-    width: 100%;
-    margin: 25px auto;
-  }
- 
-
-
-  .flex-container{
-    width: 100%;
-    height: auto;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    
-  }
-
-  .flex-box{
-    width: 400px;
-    height: 200px;
-    background: #ffffff;
-    font-size: 25px;
-    text-align: center;
-    line-height: 200px;
-    border-radius: 20px;
-    color: #152db5;
-    font-weight: bold;
-    font-family:'Courier New', Courier, monospace;
-    box-shadow: 5px 10px 5px rgb(90, 83, 83);
-
-  }
-    
-  .project{
-    display: flex;
-    width: 100%;
-    height: 600px;
-  }
-  .left{
-    width: 60%; 
-    color: #152db5;
-    margin-left: 0px;
-
-  }
-
-  .right{
-    width: 40%;
-    color: #152db5;
-    
-  }
-
-  h1{
-    font-size: 50px;
-  }
-
-  .images{
-    display: flex;
-    width: 100%;
-  }
-  
-  .images img{
-      width: 400px;
-      margin: 20px auto;
-      height: 200px;
-      
-  }
-} */
-
-
-
-/* @media screen and (min-width:900px) {
- 
-  .header{
-    width: 100%;
-    height: 20vh;
-
-  }
-
-  
-  .links{
-    display: inline-block;
-    text-align: center;
-    width: 100%;
-    margin: 0px auto;
-    
-  }
-
-  i{
-    font-size: 35px;
-  }
-
-  .p1{
-    display: inline-block;
-    font-size: larger;
-    width: 100%;
-    margin-top: 5px;
-    text-align: center;
-    
-  }
-  .button{
-    display: inline-flex; 
-    width: 100%;
-    margin-top: 0px;
-    margin-right: 7px;
-  
-    
-  }
-
-  button{
-    margin: 0px auto;
-    word-spacing: 20px;
-    display: inline-block;
-    width: auto;
-    margin-top: 5px;
-    margin-bottom: 5px;
-  }
-
-  .img{
-    display: inline-block;
-    width: 60%;
-    margin-top: 20px;
-  }
-  .p2{
-    display: inline-block;
-    width: 100%;
-    font-size: large;
-    text-align: center;
-    
-  }
-
-  .p3{
-    width: 100%;
-    font-size: x-large;
-    margin-left: 0px;
-  }
-
-  h2{
-    color: blue;
-    margin-top: 200px;
-    display: block; 
-     
-    text-align: center;
-    font-weight: 600;
-    font-size: 2em;
-  } 
-
-
-  .logo-image{
-    width: 70%;
-    margin: 0px auto;
-    
-  
-  }
-  
-  .logo{
-    display: block;
-    width: 100%;
-    margin: 25px auto;
-  } 
-
-   .flex-container{
-    width: 100%;
-    height: auto;
-    display: inline-flex;
-    
-  
-    
-  } 
- 
-
-
-   .flex-container{
-     width: 100%;
-     height: auto;
-     display: flex;
-     flex-direction: row;
-     flex-wrap: wrap; 
-     
-  }
-
-  .flex-box{
-    width: 400px;
-    height: 200px;
-    background: #ffffff;
-    font-size: 25px;
-    text-align: center;
-    line-height: 200px;
-    border-radius: 20px; 
-     color: #152db5;
-    font-weight: bold;
-    font-family:'Courier New', Courier, monospace;
-    box-shadow: 5px 10px 5px rgb(90, 83, 83);
-
-  }
-    
-  .project{
-    display: flex;
-    width: 100%;
-    height: 600px;
-  }
-  .left{
-     width: 60%; 
-    color: #152db5;
-    margin-left: 0px;
-
-  } 
-
-   .right{ 
-     display: block; 
-     width: 40%;
-    color: #152db5;
-    
-  }
-
-  h1{
-    font-size: 50px;
-  }
-
-  .images{
-    display: flex;
-    width: 100%;
-  }
-   
-   .images img{ 
-      display: inline-flex; 
-      width: 400px;
-      margin: 20px auto;
-      height: 200px;
-      
-  }
-}  */
-
-
-
-/* @media screen and (min-width:1000px) {
-   
-   
-
-
-
-   } */
     
